[gd_scene load_steps=16 format=2]

[ext_resource path="res://jauges/folie2.png" type="Texture" id=1]
[ext_resource path="res://jauges/life1.png" type="Texture" id=2]
[ext_resource path="res://jauges/life2.png" type="Texture" id=3]
[ext_resource path="res://jauges/folie1.png" type="Texture" id=4]
[ext_resource path="res://code/Player2D.gd" type="Script" id=5]
[ext_resource path="res://personnage/main perso2D frames.png" type="Texture" id=6]

[sub_resource type="Animation" id=2]
resource_name = "droite2D"
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1.06464, 1 ),
"update": 1,
"values": [ 4, 3, 5, 3 ]
}

[sub_resource type="Animation" id=3]
resource_name = "gauche2D"
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1.1487, 1 ),
"update": 1,
"values": [ 1, 0, 2, 0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "imoDroite2D"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=9]
resource_name = "imoGauche2D"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "poingDroite2D"
length = 0.3
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.15 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}

[sub_resource type="Animation" id=5]
resource_name = "poingGauche2D"
length = 0.3
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.15 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=6]
resource_name = "sautDroite2D"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=7]
resource_name = "sautGauche2D"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 15.0649 )

[node name="Player2D" type="KinematicBody2D"]
position = Vector2( 34, -10 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_horizontal_guides_": [  ],
"_edit_vertical_guides_": [  ]
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1, -7 )
scale = Vector2( 1.0075, 1 )
texture = ExtResource( 6 )
hframes = 10
frame = 1

[node name="anim" type="AnimationPlayer" parent="."]
anims/droite2D = SubResource( 2 )
anims/gauche2D = SubResource( 3 )
anims/imoDroite2D = SubResource( 8 )
anims/imoGauche2D = SubResource( 9 )
anims/poingDroite2D = SubResource( 4 )
anims/poingGauche2D = SubResource( 5 )
anims/sautDroite2D = SubResource( 6 )
anims/sautGauche2D = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -7 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="jauges2D" type="CanvasLayer" parent="."]

[node name="folie2D" type="TextureProgress" parent="jauges2D"]
margin_left = 30.0
margin_top = 5.0
margin_right = 40.0
margin_bottom = 40.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 1 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pv2D" type="TextureProgress" parent="jauges2D"]
margin_left = 5.0
margin_top = 5.0
margin_right = 40.0
margin_bottom = 40.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}
